# GRHayL

./: .clang-format  .clangd  .editorconfig  .gitattribute  .gitattributes  .gitignore  AUTHORS  C2P_test_suite.c  Doxyfile  DoxygenLayout.xml  EOS_functions.c  EOS_header.h  EOS_hybrid.c  EOS_hybrid_header.h  GRMHD_header.h  IGM_functions.c  LICENSE  Makefile  README.md  apply_inequality_fixes.c  apply_tau_floor.c  codecov.yml  compile_flags.txt  compute_conservs_and_Tmunu.c  con2prim_ETK_interface.c  con2prim_Noble2D.c  con2prim_header.h  con2prim_loop_kernel.c  con2prim_select.c  con2prim_test.C  con2prim_wrapper.c  configure  eigen.c  enforce_primitive_limits.c  font_fix.c  font_fix_hybrid_EOS.C  font_fix_hybrid_EOS.c  font_fix_rhob_loop.c  generate_makefile.sh  guess_primitives.c  (+15 more)
GRHayL/: make.code.defn  meson.build
GRHayL/Atmosphere/: make.code.defn  set_prims_to_constant_atm.c  set_prims_to_radial_falloff_atm.c
GRHayL/Con2Prim/: apply_conservative_limits.c  apply_inequality_fixes.c  brent.c  compute_Bsq_from_Bup.c  compute_SU_Bsq_Ssq_BdotS.c  compute_conservs.c  compute_conservs_and_Tmunu.c  con2prim_multi_method.c  enforce_primitive_limits_and_compute_u0.c  get_con2prim_routine_name.c  grhayl_con2prim_multi_method.c  guess_primitives.c  harm_u2p_util.h  initialize_diagnostics.c  limit_utilde_and_compute_v.c  limit_v_and_compute_u0.c  make.code.defn  meson.build  reset_prims_to_atmosphere.c  roots.h  toms748.c  undensitize_conservatives.c  utils_Noble.h  utils_Palenzuela1D.h
GRHayL/EOS/: make.code.defn  meson.build
GRHayL/Flux_Source/: GRHayL_rhs.py  GRMHD_equations_new_version.py  IGM_All_Source_Terms.py  IGM_All_fluxes.py  IGM_Characteristic_Speeds.py  calculate_HLLE_fluxes_dirn0.c  calculate_HLLE_fluxes_dirn1.c  calculate_HLLE_fluxes_dirn2.c  calculate_Stilde_source_term_dirn0.c  calculate_Stilde_source_term_dirn1.c  calculate_Stilde_source_term_dirn2.c  calculate_all_source_terms.c  calculate_characteristic_speed_dirn0.c  calculate_characteristic_speed_dirn1.c  calculate_characteristic_speed_dirn2.c  calculate_source_terms_dirn0.c  calculate_source_terms_dirn1.c  calculate_source_terms_dirn2.c  calculate_tau_tilde_source_term.c  calculate_tau_tilde_source_term_extrinsic_curv.c  ghl_calculate_HLLE_fluxes.c  ghl_calculate_HLLE_fluxes_dirn0.c  ghl_calculate_HLLE_fluxes_dirn1.c  ghl_calculate_HLLE_fluxes_dirn2.c  ghl_calculate_HLLE_fluxes_hybrid.c  ghl_calculate_HLLE_fluxes_hybrid_entropy.c  ghl_calculate_HLLE_fluxes_tabulated.c  ghl_calculate_HLLE_fluxes_tabulated_entropy.c  ghl_calculate_characteristic_speed.c  ghl_calculate_characteristic_speed_dirn0.c  ghl_calculate_characteristic_speed_dirn1.c  ghl_calculate_characteristic_speed_dirn2.c  ghl_calculate_source_terms.c  ghl_calculate_source_terms_dirn0.c  ghl_calculate_source_terms_dirn1.c  ghl_calculate_source_terms_dirn2.c  ghl_calculate_tau_tilde_source_term_extrinsic_curv.c  grhayl_calculate_HLLE_fluxes_dirn0.c  grhayl_calculate_HLLE_fluxes_dirn1.c  grhayl_calculate_HLLE_fluxes_dirn2.c  (+5 more)
GRHayL/GRHayL_Core/: abort_if_error.c  compute_ADM_auxiliaries.c  compute_TDNmunu.c  compute_TUPmunu.c  compute_smallb_and_b2.c  enforce_detgij_and_initialize_ADM_metric.c  enforce_detgij_and_initialize_metric.c  grhayl_info_warn_error.c  grhayl_initialize.c  info_warn_error.c  initialize_GRHayL.c  initialize_conservatives.c  initialize_eos.c  initialize_extrinsic_curvature.c  initialize_m1_closure.c  initialize_metric.c  initialize_params.c  initialize_primitives.c  initialize_stress_energy.c  limit_v_and_compute_u0.c  make.code.defn  meson.build  metric_helper.c  min_max_clamp.c  read_error_codes.c  return_conservatives.c  return_primitives.c  return_stress_energy.c  roots_brent.c  roots_toms748.c
GRHayL/Induction/: HLL_2D_flux.c  HLL_2D_flux_with_B.c  HLL_2D_flux_with_Btilde.c  HLL_flux.c  HLL_flux_with_B.c  HLL_flux_with_Btilde.c  average.c  calculate_phitilde_and_A_gauge_rhs.c  calculate_phitilde_rhs.c  interpolate_for_A_gauge_rhs.c  interpolate_for_A_gauge_rhs_from_ADM.c  interpolate_for_A_gauge_rhs_from_BSSN.c  interpolate_for_induction_rhs.c  make.code.defn  meson.build
GRHayL/Neutrinos/: meson.build
GRHayL/Radiation/: make.code.defn
GRHayL/Reconstruction/: compute_UrUl_onevar.c  flatten_and_monotonize_Ur_and_Ul.c  grhayl_maxmod.c  grhayl_mc_reconstruction.c  grhayl_minmod.c  grhayl_minmod_reconstruction.c  grhayl_superbee_reconstruction.c  make.code.defn  maxmod.c  mc_reconstruction.c  meson.build  minmod.c  minmod_reconstruction.c  shock_detection_ftilde.c  simple_ppm.c  simple_ppm_no_rho_P.c  slope_limit.c  steepen_rhor_rhol.c  superbee_reconstruction.c
GRHayL/include/: GRHayL.h  NRPyEOS_Hybrid.h  NRPyEOS_Tabulated.h  Neutrinos.h  atmosphere.h  con2prim.h  flux_source.h  flux_source_unit_test.h  ghl.h  ghl_atmosphere.h  ghl_con2prim.h  ghl_debug.h  ghl_eos_functions.h  ghl_eos_functions_declaration.h  ghl_flux_source.h  ghl_induction.h  ghl_io.h  ghl_m1.h  ghl_metric_helpers.h  ghl_nrpyeos_hybrid.h  ghl_nrpyeos_tabulated.h  (+20 more)
Unit_Tests/: compute_A_flux_with_B.c  compute_A_flux_with_Btilde.c  compute_ccc_ADM.c  compute_ccc_BSSN.c  compute_vvv_ADM.c  con2prim_unit_test.c  failure.sh  initial_random_data.c  io_con2prim_initial_data.c  io_conservative_binary.c  io_flux_source_initialize_structs.c  io_flux_source_read_from_binary_file.c  io_metric_binary.c  io_primitive_binary.c  io_stress_energy_binary.c  make.code.defn  meson.build  nrpyleakage_main.h  output_conservative_binary.c  output_primitive_binary.c  output_stress_energy_binary.c  pert_test_fail_conservatives.c  pert_test_fail_primitives.c  pert_test_fail_stress_energy.c  randomize_metric.c  randomize_primitives.c  tabulated_eos_unit_test_helpers.c  test_compute_h_and_cs2.c  unit_test_A_no_gauge_rhs.c  unit_test_ET_Legacy_HLL_flux.c  unit_test_ET_Legacy_conservs.c  unit_test_ET_Legacy_flux_source.c  unit_test_ET_Legacy_flux_source_tabulated.c  unit_test_ET_Legacy_induction_gauge_rhs.c  unit_test_ET_Legacy_primitives.c  unit_test_ET_Legacy_reconstruction.c  unit_test_HLL_2D_flux.c  unit_test_HLL_flux.c  unit_test_Hybrid_FontFix.c  unit_test_Hybrid_Noble2D.c  (+62 more)
(+901 files in other folders)
