subdir('C2P_Routines')

Con2Prim_base_sources = files('apply_inequality_fixes.c',
                              'compute_conservs_and_Tmunu.c',
                              'enforce_primitive_limits_and_compute_u0.c',
                              'guess_primitives.c',
                              'initialize_diagnostics.c',
                              'limit_utilde_and_compute_v.c',
                              'reset_prims_to_atmosphere.c',
                              'undensitize_conservatives.c')

Con2Prim_sources = [Con2Prim_base_sources, C2P_Routines_sources]
