GRHayL_include_dir = include_directories('.')
headers = files('con2prim.h',
                'flux_source.h',
                'flux_source_unit_test.h',
                'GRHayL.h',
                'GRHayL_io.h',
                'induction.h',
                'Neutrinos.h',
                'NRPyEOS_Hybrid.h',
                'NRPyEOS_Tabulated.h',
                'NRPyLeakage.h',
                'reconstruction.h',
                'unit_tests.h')
install_headers(headers, subdir: 'grhayl')
