subdir('interpolators')

Tabulated_base_sources = files('NRPyEOS_free_memory.c',
                               'NRPyEOS_initialize_tabulated_functions.c',
                               'NRPyEOS_read_table_set_EOS_params.c',
                               'NRPyEOS_tabulated_compute_enthalpy_and_cs2.c')

EOS_Tabulated_sources = [Tabulated_base_sources, Tabulated_interpolators_sources]
