C2P_Hybrid_sources = files('func_1d_orig.c',
                           'func_rho2.c',
                           'func_rho.c',
                           'func_vsq.c',
                           'func_Z.c',
                           'GNR1D.c',
                           'GNR2D.c',
                           'Hybrid_Multi_Method.c',
                           'Hybrid_Noble1D.c',
                           'Hybrid_Noble1D_Entropy2.c',
                           'Hybrid_Noble1D_Entropy.c',
                           'Hybrid_Noble2D.c')
